--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
     "name": "fastifyjs",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
+    "main": "./src/server.js",
     "scripts": {
         "start": "node server",
-        "dev": "nodemon server"
+        "dev": "nodemon server",
+        "beautiful": "prettier --print-width 120 --use-tabs --single-quote --tab-width 4 --trailing-comma none --write \"src/**/*.{js,json,css,scss}\""
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "dotenv": "^16.0.1",
+        "@fastify/env": "^4.1.0",
+        "@fastify/swagger": "^7.4.1",
         "fastify": "^4.4.0",
         "fastify-swagger": "^5.2.0",
         "npm": "^8.17.0",
@@ -19,6 +21,7 @@
         "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "nodemon": "^2.0.19"
+        "nodemon": "^2.0.19",
+        "prettier": "^2.7.1"
     }
 }
